Schedule: Fix border on small-screen schedule

--- a/css/includes/schedule.css
+++ b/css/includes/schedule.css
@@ -273,6 +273,11 @@ body.single-wcb_session {
 
 	@media (max-width: 549px) {
 
+		& .wordcamp-schedule__session,
+		& .wordcamp-schedule__time-slot-header {
+			border: none;
+		}
+
 		& .wordcamp-schedule__time-slot-header {
 			margin-top: 0;
 		}
