--- a/style.css
+++ b/style.css
@@ -852,6 +852,11 @@ body.single-wcb_session .wp-block-post-terms a:hover {
 
 @media (max-width: 549px) {
 
+		.wordcamp-schedule:not(#hack) .wordcamp-schedule__session,
+		.wordcamp-schedule:not(#hack) .wordcamp-schedule__time-slot-header {
+			border: none;
+		}
+
 		.wordcamp-schedule:not(#hack) .wordcamp-schedule__time-slot-header {
 			margin-top: 0;
 		}
